tools/tree-sitter-sr/grammar.js
    source_file: $ => seq(
      optional($.package_declaration),
      repeat($._item)
    ),

    _item: $ => choice(
      $.declaration,
      $.statement,
    ),

    const_declaration: $ => prec.left(1, seq(
      repeat(field('attribute', $.attribute)),
      repeat(field('modifier', $.declaration_modifier)),
      field('pattern', $.pattern),
      choice(
        seq(
          ':',
          field('type', $.type),
          ':',
          field('value', $.expression)
        ),
        seq(
          '::',
          repeat(field('value_attribute', $.attribute)),
          field('value', choice($.type, $.expression))
        )
      )
    )),

    var_declaration: $ => prec.left(1, seq(
      repeat(field('attribute', $.attribute)),
      repeat(field('modifier', $.declaration_modifier)),
      field('pattern', $.pattern),
      choice(
        seq(
          ':',
          field('type', $.type),
          '=',
          field('value', $.expression)
        ),
        seq(
          ':=',
          field('value', $.expression)
        )
      )
    )),

    _pattern_without_or: $ => choice(
      $.binding_pattern,
      $.range_pattern,
      $.variant_pattern,
      $.struct_pattern,
      $.tuple_pattern,
      $.array_pattern,
      $.literal_pattern,
      $.identifier,
      $.wildcard_pattern
    ),

    wildcard_pattern: $ => '_',

    literal_pattern: $ => choice(
      alias($.integer_literal, $.literal_pattern),
      alias($.float_literal, $.literal_pattern),
      alias($.string_literal, $.literal_pattern),
      alias($.char_literal, $.literal_pattern),
      alias($.boolean_literal, $.literal_pattern)
    ),

    binding_pattern: $ => seq(
      field('name', $.identifier),
      '@',
      field('pattern', $.pattern)
    ),

    or_pattern: $ => prec.left(seq(
      $._pattern_without_or,
      '|',
      $._pattern_without_or,
      repeat(seq('|', $._pattern_without_or))
    )),

    range_pattern: $ => seq(
      field('start', $.pattern_range_bound),
      field('operator', choice('..', '..=')),
      field('end', $.pattern_range_bound)
    ),

    pattern_range_bound: $ => choice(
      $.literal_pattern,
      $.identifier
    ),

    tuple_pattern: $ => seq(
      '(',
      optional(commaSep1($.pattern)),
      ')'
    ),

    array_pattern: $ => seq(
      '[',
      optional(commaSep1($.array_pattern_element)),
      ']'
    ),

    array_pattern_element: $ => choice(
      $.pattern,
      $.rest_pattern
    ),

    rest_pattern: $ => seq('..', optional(field('name', $.identifier))),

    struct_pattern: $ => seq(
      field('type', $.identifier),
      repeat(seq('.', field('name', $.identifier))),
      field('body', $.struct_pattern_body)
    ),

    struct_pattern_body: $ => seq(
      '{',
      optional(commaSep1(choice($.struct_pattern_field, $.rest_pattern))),
      '}'
    ),

    struct_pattern_field: $ => choice(
      seq(
        field('name', $.identifier),
        ':',
        field('value', $.pattern)
      ),
      field('shorthand', $.identifier)
    ),

    variant_pattern: $ => seq(
      field('constructor', $.identifier),
      repeat1(seq('.', field('name', $.identifier))),
      optional(choice(
        field('arguments', $.variant_pattern_arguments),
        field('fields', $.variant_pattern_fields)
      ))
    ),

    variant_pattern_arguments: $ => seq(
      '(',
      optional(commaSep1($.pattern)),
      ')'
    ),

    variant_pattern_fields: $ => seq(
      '{',
      optional(commaSep1(choice($.struct_pattern_field, $.rest_pattern))),
      '}'
    ),


    expression_statement: $ => $.expression,

    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.fn_expression,
      $.proc_expression,
      $.closure_expression,
      $.async_expression,
      $.tuple_expression,
      $.array_expression,
      $.parenthesized_expression,
      $.block
    ),

    tuple_expression: $ => seq(
      '(',
      field('first', $.expression),
      ',',
      optional(commaSep($.expression)),
      optional(','),
      ')'
    ),

    block: $ => seq(
      '{',
      repeat($._block_item),
      '}'
    ),

    _block_item: $ => choice(
      $.declaration,
      $.statement
    ),

    call_expression: $ => prec(PREC.call, seq(
      field('function', $.expression),
      field('arguments', $.argument_list)
    )),

    argument_list: $ => seq(
      '(',
      optional(commaSep($.expression)),
      ')'
    ),

    member_expression: $ => prec(PREC.member, seq(
      field('object', $.expression),
      '.',
      field('property', choice($.identifier, $.integer_literal))
    )),

    struct_literal: $ => prec(PREC.postfix, seq(
      field('type', $.expression),
      field('body', $.struct_literal_body)
    )),

    struct_literal_body: $ => seq(
      '{',
      optional(commaSep1(choice($.struct_literal_field, $.struct_literal_spread))),
      '}'
    ),

    struct_literal_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $.expression)
    ),

    match_expression: $ => seq(
      'match',
      field('value', $.expression),
      '{',
      optional(commaSep1($.match_arm)),
      '}'
    ),

    match_arm: $ => prec.right(1, seq(
      field('pattern', $.pattern),
      '=>',
      field('body', choice($.block, $.expression))
    )),

    binary_expression: $ => choice(
      ...binaryExpression($, ['or'], PREC.or),
      ...binaryExpression($, ['and'], PREC.and),
      ...binaryExpression($, ['orelse'], PREC.orelse),
      ...binaryExpression($, ['catch'], PREC.catch),
      ...binaryExpression($, ['|'], PREC.bitwise_or),
      ...binaryExpression($, ['^'], PREC.bitwise_xor),
      ...binaryExpression($, ['&'], PREC.bitwise_and),
      ...binaryExpression($, ['==', '!='], PREC.equality),
      ...binaryExpression($, ['<', '<=', '>', '>='], PREC.relational),
      ...binaryExpression($, ['..', '..='], PREC.range),
      ...binaryExpression($, ['<<', '>>'], PREC.shift),
      ...binaryExpression($, ['+', '-'], PREC.additive),
      ...binaryExpression($, ['*', '/', '%'], PREC.multiplicative)
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
    ),

    integer_literal: $ => token(choice(
      BINARY_DIGITS,
      OCTAL_DIGITS,
      HEX_DIGITS,
      DECIMAL_DIGITS
    )),

    string_literal: $ => token(choice(
      seq('"', repeat(choice(/[^\\"\n]/, /\\./)), '"'),
      seq('b"', repeat(choice(/[^\\"\n]/, /\\./)), '"'),
      seq('r"', repeat(/[^"]/), '"'),
      seq('br"', repeat(/[^"]/), '"'),
      seq('r#"', repeat(choice(/[^"]/, seq('"', /[^#]/))), '"#'),
      seq('br#"', repeat(choice(/[^"]/, seq('"', /[^#]/))), '"#')
    )),

    struct_type: $ => seq(
      'struct',
      field('body', $.struct_body)
    ),

    struct_body: $ => seq(
      '{',
      optional(commaSep1($.struct_field)),
      '}'
    ),

    struct_field: $ => seq(
      repeat(field('attribute', $.attribute)),
      optional(field('modifier', $.declaration_modifier)),
      field('name', $.identifier),
      ':',
      field('type', $.type)
    ),

    map_type: $ => seq(
      '[',
      field('key', $.type_identifier),
      token.immediate(':'),
      field('value', $.type),
      ']'
    ),

    slice_type: $ => seq('[', ']', field('element', $.type)),

    dynamic_array_type: $ => seq('[', 'dyn', ']', field('element', $.type)),

    array_type: $ => seq(
      '[',
      field('length', $.expression),
      ']',
      field('element', $.type)
    ),

    tuple_type: $ => seq(
      '(',
      field('first', $.type),
      ',',
      optional(commaSep($.type)),
      optional(','),
      ')'
    ),

    optional_type: $ => seq('?', field('type', $.type)),

    error_union_type: $ => prec.left(seq(
      field('left', $.type),
      '!',
      field('right', $.type)
    )),

    pointer_type: $ => seq(
      '*',
      repeat(field('qualifier', $.pointer_qualifier)),
      field('type', $.type)
    ),

    pointer_qualifier: $ => 'const',

    function_type: $ => prec.right(seq(
      'fn',
      field('parameters', $.type_parameter_list),
      optional(field('return_type', $.type))
    )),

    procedure_type: $ => prec.right(seq(
      'proc',
      field('parameters', $.type_parameter_list),
      optional(field('return_type', $.type))
    )),

    type_parameter_list: $ => seq(
      '(',
      optional(commaSep1($.type_parameter)),
      ')'
    ),

    type_parameter: $ => choice(
      seq(field('name', $.identifier), ':', field('type', $.type)),
      field('type', $.type)
    ),

    error_type: $ => seq(
      'error',
      '{',
      optional(commaSep1(field('name', $.identifier))),
      '}'
    ),

    type_call: $ => prec(PREC.call, seq(
      field('function', $.type_identifier),
      '(',
      optional(commaSep1($.type_argument)),
      ')'
    )),

    type_argument: $ => choice(
      $.type,
      $.literal,
      $.identifier
    ),

    type_identifier: $ => choice(
      $.type_path,
      $.identifier
    ),

    identifier: $ => token(prec(-1, /[_A-Za-z][_A-Za-z0-9]*/)),
